Adding Get Agreeability type
