# docs/swagger.yaml
@@ -1324,6 +1324,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /terms/agreeability-types/:id:
+    get:
+      tags:
+        - Agreeability Types
+      description: |
+        Get One agreeability types by ID
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  legacyId:
+                    type: number
+                  name:
+                    type: string
+                  description:
+                    type: string
+        401:
+          description: Not authenticated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        404:
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
                   
 components:
   securitySchemes:
